nginx-test/appone/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-safa-g-prod
  name: appone-service
spec:
  rules:
  - host: appone.safa-g.com
    http:
      paths:
      - backend:
          serviceName: appone-service
          servicePort: http
  tls:
  - hosts:
    - appone.safa-g.com
    secretName: appone-safag05-tls
